--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8081
 zuul:
   add-host-header: true
 eureka:
   client:
     serviceUrl:
-      defaultZone : http://localhost:8761/eureka/
+      defaultZone : http://localhost:8761/eureka/,http://localhost:9761/eureka/
   instance:
     lease-renewal-interval-in-seconds: 1
     lease-expiration-duration-in-seconds: 2
